# exercicios_python_SQL

./: BoxplotTest.py  bibliotecas.py  construcaoKPI.txt  db_hosp_generic.sql  dfhospitalreadmission.ipynb  estudos.py  estudos.sql  heatmapTest.py  hello.py  indices.sql  normalizacao.txt  pairplotTest.py  pyproject.toml  seabornTest.py  testesdehipoteses.py  transacoes.sql
